--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "final_project",
+  "name": "nexttutorial",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "eslint": "8.47.0",
-    "eslint-config-next": "13.4.19",
-    "next": "13.4.19",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "bcryptjs": "^2.4.3",
+    "eslint": "8.41.0",
+    "eslint-config-next": "13.4.3",
+    "mongoose": "^6.11.1",
+    "next": "^13.4.3",
+    "next-auth": "^4.22.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "swr": "^2.1.5"
   }
 }
